--- a/.github/workflows/update-epg.yml
+++ b/.github/workflows/update-epg.yml
@@ -27,7 +27,6 @@ jobs:
           from bs4 import BeautifulSoup
           from datetime import datetime, timedelta, timezone
           from dateutil.relativedelta import relativedelta
-          from zoneinfo import ZoneInfo # <-- Add this line
 
           HEADERS = {'User-Agent': 'Mozilla/5.0'}
           LEAGUE_SLUGS = [
@@ -43,6 +42,27 @@ jobs:
                   return r.text
               except: return None
 
+          def parse_teams_and_logos(html_content):
+              if not html_content: return {}
+              logo_map = {}
+              soup = BeautifulSoup(html_content, 'html.parser')
+              table = soup.find('table', {'data-testid': 'football-table'})
+              if not table: return {}
+              tbody = table.find('tbody')
+              if not tbody: return {}
+              for row in tbody.find_all('tr'):
+                  cells = row.find_all(['th', 'td'])
+                  if len(cells) < 10: continue
+                  try:
+                      team_name_span = cells[0].find('span', class_='visually-hidden')
+                      team_name = team_name_span.get_text(strip=True) if team_name_span else None
+                      logo_img = cells[0].find('img', class_=lambda c: c and 'BadgeImage' in c)
+                      logo_url = logo_img['src'] if logo_img else ''
+                      if team_name and logo_url:
+                          logo_map[team_name] = logo_url
+                  except: continue
+              return logo_map
+
           def parse_fixtures(html_content, competition_name):
               if not html_content: return []
               soup = BeautifulSoup(html_content, 'html.parser')
@@ -53,62 +73,34 @@ jobs:
                   data = json.loads(json.loads(json_text))
                   fixtures_key = next((k for k in data.get('data', {}) if 'sport-data-scores-fixtures' in k), None)
                   if fixtures_key:
-                      event_groups = data['data'][fixtures_key].get('data', {}).get('eventGroups', [])
-                      for group in event_groups:
+                      for group in data['data'][fixtures_key].get('data', {}).get('eventGroups', []):
                           for s_group in group.get('secondaryGroups', []):
                               for event in s_group.get('events', []):
                                   if event.get('status') == 'PreEvent':
-                                      fixtures.append({
-                                          'home_team': event['home']['fullName'],
-                                          'away_team': event['away']['fullName'],
-                                          'datetime_utc': event['startDateTime'],
-                                          'competition': competition_name
-                                      })
+                                      fixtures.append({'home_team': event['home']['fullName'],'away_team': event['away']['fullName'],'datetime_utc': event['startDateTime'],'competition': competition_name})
               except Exception as e:
                   print(f"⚠️ Could not parse fixtures from a page: {e}")
               return fixtures
 
-          def main():
-              all_fixtures, all_teams = [], set()
-              today = datetime.now()
-              next_month_date = today + relativedelta(months=1)
-
-              for slug in LEAGUE_SLUGS:
-                  competition_name = slug.replace('-', ' ').title()
-                  if competition_name == "Fa Cup": competition_name = "FA Cup"
-                  if competition_name == "League Cup": competition_name = "EFL Cup"
-                  
-                  print(f"\n--- Processing Fixtures for {slug} ---")
-                  base_url = f"https://www.bbc.co.uk/sport/football/{slug}"
-                  url1 = f"{base_url}/scores-fixtures/{today.strftime('%Y-%m')}"
-                  url2 = f"{url1}?filter=fixtures"
-                  url3 = f"{base_url}/scores-fixtures/{next_month_date.strftime('%Y-%m')}"
-                  
-                  for url in [url1, url2, url3]:
-                      fixtures_html = fetch_html(url)
-                      all_fixtures.extend(parse_fixtures(fixtures_html, competition_name))
-              
-              unique_fixtures = [dict(t) for t in {tuple(d.items()) for d in all_fixtures}]
-              for fix in unique_fixtures:
-                  all_teams.add(fix['home_team'])
-                  all_teams.add(fix['away_team'])
-              
-              print(f"\n✅ Found {len(unique_fixtures)} total unique fixtures across all competitions.")
-
-              # --- EPG Generation Logic ---
+          def create_epg(all_teams, all_fixtures, logo_map):
               now_utc = datetime.now(timezone.utc)
               uk_tz = ZoneInfo("Europe/London")
               now_local = now_utc.astimezone(uk_tz)
               future_limit = now_local + timedelta(days=60)
               xml = '<?xml version="1.0" encoding="UTF-8"?>\n<tv>'
               team_fixtures = {team: [] for team in all_teams}
-              for fix in unique_fixtures:
+              for fix in all_fixtures:
                   team_fixtures.setdefault(fix['home_team'], []).append(fix)
                   team_fixtures.setdefault(fix['away_team'], []).append(fix)
 
               for team_name in sorted(all_teams):
                   team_slug = ''.join(c for c in team_name.lower().replace('&', 'and').replace(' ', '-') if c.isalnum() or c == '-')
-                  xml += f'\n  <channel id="{team_slug}.uk"><display-name lang="en">{team_name}</display-name></channel>'
+                  logo_url = logo_map.get(team_name, "")
+                  xml += f'\n  <channel id="{team_slug}.uk">'
+                  xml += f'\n    <display-name lang="en">{team_name}</display-name>'
+                  if logo_url:
+                      xml += f'\n    <icon src="{logo_url}" />'
+                  xml += '\n  </channel>'
                   
                   sorted_fixtures = sorted(team_fixtures.get(team_name, []), key=lambda x: x['datetime_utc'])
                   next_game_start = datetime.fromisoformat(sorted_fixtures[0]['datetime_utc'].replace('Z', '+00:00')) if sorted_fixtures else None
@@ -133,6 +125,42 @@ jobs:
               xml += '\n</tv>'
               with open('epg.xml', 'w', encoding='utf-8') as f: f.write(xml)
               print("✅ EPG file generated successfully.")
+
+          def main():
+              all_fixtures, all_teams, logo_map = [], set(), {}
+              today = datetime.now()
+              next_month_date = today + relativedelta(months=1)
+
+              for slug in LEAGUE_SLUGS:
+                  competition_name = slug.replace('-', ' ').title()
+                  if competition_name == "Fa Cup": competition_name = "FA Cup"
+                  if competition_name == "League Cup": competition_name = "EFL Cup"
+                  
+                  print(f"\n--- Processing {slug} ---")
+                  base_url = f"https://www.bbc.co.uk/sport/football/{slug}"
+                  
+                  # Scrape logos from table pages (if they exist)
+                  table_html = fetch_html(f"{base_url}/table")
+                  if table_html:
+                      logo_map.update(parse_teams_and_logos(table_html))
+
+                  # Scrape fixtures from date-paginated pages
+                  url1 = f"{base_url}/scores-fixtures/{today.strftime('%Y-%m')}"
+                  url2 = f"{url1}?filter=fixtures"
+                  url3 = f"{base_url}/scores-fixtures/{next_month_date.strftime('%Y-%m')}"
+                  
+                  for url in [url1, url2, url3]:
+                      fixtures_html = fetch_html(url)
+                      all_fixtures.extend(parse_fixtures(fixtures_html, competition_name))
+              
+              unique_fixtures = [dict(t) for t in {tuple(d.items()) for d in all_fixtures}]
+              for fix in unique_fixtures:
+                  all_teams.add(fix['home_team'])
+                  all_teams.add(fix['away_team'])
+              
+              print(f"\n✅ Found {len(logo_map)} logos and {len(unique_fixtures)} unique fixtures.")
+
+              create_epg(all_teams, unique_fixtures, logo_map)
 
           if __name__ == "__main__":
               main()
